# ng-wc

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  pr-title.yml  publish.yml
docs/: index.md  ng_wc.md
src/ng_wc/: __init__.py  main.py
tests/: test.py  test_example.py
